# luna

./: .gitignore  meson.build
.github/: plan.md
plugins/: hello.lua
src/: main.cpp  meson.build
src/ai/: AiAssist.cpp  AiAssist.hpp  meson.build
src/core/: Core.cpp  Core.hpp  meson.build
src/editor/: Editor.cpp  Editor.hpp  meson.build
src/lsp/: LspClient.cpp  LspClient.hpp  meson.build
src/plugin/: PluginManager.cpp  PluginManager.hpp  meson.build
src/res/: resources.qrc
src/ui/: Main.qml  MainWindow.cpp  MainWindow.hpp  meson.build
src/ui/qml/: AiPanel.qml  CenterArea.qml  Main.qml  ResizeHandles.qml  SidePanel.qml  StatusBar.qml  ToolsPanel.qml  Topbar.qml
src/ui/widgets/: AiPanel.cpp  AiPanel.hpp  EditorPanel.cpp  EditorPanel.hpp  Icon.cpp  Icon.hpp  SidePanel.cpp  SidePanel.hpp  StatusBar.cpp  StatusBar.hpp  TerminalPanel.cpp  TerminalPanel.hpp  ToolBar.cpp  ToolBar.hpp  ToolsPanel.cpp  ToolsPanel.hpp  TopBar.cpp  TopBar.hpp  meson.build
tests/: basic_test.cpp  meson.build
